RoxeeMegaUp-0.5.0:
    Build cleanup
    Linux "support"

RoxeeMegaUp-0.4.1:
    + Sparkle trunk

RoxeeMegaUp-0.4.0:
    First release.