@@ -1,3 +1,7 @@
+RoxeeMegaUp-0.6.0:
+    Build system synch.
+    Version bump to stay synched with Roxee.
+
 RoxeeMegaUp-0.5.0:
     Build cleanup
     Linux "support"
